version/0.9/_sources/api/ansys/speos/core/sensor/Sensor3DIrradiance.Radiometric.rst.txt






:class:`Radiometric`
====================


.. py:class:: ansys.speos.core.sensor.Sensor3DIrradiance.Radiometric(sensor_type_radiometric, default_parameters = None, stable_ctr = True)

   
   Class computing the radiant intensity (in W.sr-1).

   Generate an extended map for Virtual Photometric Lab.

   :Parameters:

       **illuminance_type** : :obj:`ansys.api.speos.sensor.v1.sensor_pb2.TypeRadiometric`
           SensorTypeColorimetric protobuf object to modify.

       **default_parameters** : :obj:`Optional`\[        :obj:`ansys.speos.core.generic.parameters.Irradiance3DSensorParameters`] = :data:`python:None`
           Uses default values when True.

       **stable_ctr** : :ref:`bool <python:bltin-boolean-values>`
           Variable to indicate if usage is inside class scope











   .. rubric:: Notes

   **Do not instantiate this class yourself**, use set_type_colorimetric method available in
   sensor classes.



   ..
       !! processed by numpydoc !!


.. py:currentmodule:: Radiometric

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~set_integration_planar`
            - Set integration planar.
          * - :py:attr:`~set_integration_radial`
            - Set integration radial.








Import detail
-------------

.. code-block:: python

    from ansys.speos.core.sensor.Sensor3DIrradiance import Radiometric



Method detail
-------------

.. py:method:: set_integration_planar()

   
   Set integration planar.





   :Returns:

       :obj:`ansys.speos.core.sensor.Sensor3DIrradiance.Measures`
           measured defines transmission, reflection, absorption











   ..
       !! processed by numpydoc !!

.. py:method:: set_integration_radial()

   
   Set integration radial.
















   ..
       !! processed by numpydoc !!




